Fixed time dialog box becoming too small on mobile site

--- a/client/main.css
+++ b/client/main.css
@@ -508,7 +508,7 @@ fieldset[disabled] .btn-success.active {
   font-size: 110%;
   vertical-align: 10px;
   text-align: center;
-  width: 30%;
+  width: 40%;
   margin: auto; 
 }
 
